fix #622412 - nav button overlap & other css fixes

--- a/src/public/scss/public.scss
+++ b/src/public/scss/public.scss
@@ -252,6 +252,10 @@
   transition                  : opacity .3s;
   border-color                : #ffffff;
   color                       : #ffffff;
+  -webkit-box-sizing : border-box;
+  -moz-box-sizing    : border-box;
+  box-sizing         : border-box;
+
   &:hover {
     opacity         : 1;
     filter          : alpha(opacity=100);
@@ -304,6 +308,9 @@
       -ms-transition     : border-width .3s;
       -o-transition      : border-width .3s;
       transition         : border-width .3s;
+      -webkit-box-sizing : border-box;
+      -moz-box-sizing    : border-box;
+      box-sizing         : border-box;
     }
   }
 
@@ -358,6 +365,10 @@
     box-shadow         : none;
     background-color   : #000000;
     color              : #ffffff;
+    -webkit-box-sizing : border-box;
+    -moz-box-sizing    : border-box;
+    box-sizing         : border-box;
+
     &:hover {
       background-color : #333333;
     }
@@ -367,6 +378,9 @@
     display : block;
     border  : 1px solid;
     padding : 5px 10px;
+    -webkit-box-sizing : border-box;
+    -moz-box-sizing    : border-box;
+    box-sizing         : border-box;
   }
 
   .g-recaptcha {
@@ -380,13 +394,17 @@
     max-width : 540px;
     margin    : 0 auto;
     padding   : 0 20px;
+    -webkit-box-sizing : border-box;
+    -moz-box-sizing    : border-box;
+    box-sizing         : border-box;
   }
   
   .pafl-social-link {
     display : block;
     color: #fff;
-    font-size: 18px;
+    font-size: 17px;
     font-family: sans-serif;
+    font-weight: bold;
 
     &:hover {
       color: #fff;
@@ -414,10 +432,12 @@
 .pafl-message-display {
   position : absolute;
   width: 100%;
+  top: 0;
   text-align: center;
   -webkit-animation : slideUpRetourn .1s;
   -o-animation      : slideUpRetourn .1s;
   animation         : slideUpRetourn .1s;
+  z-index: 99999999;
 }
 
 .pafl-message {
@@ -425,6 +445,9 @@
   padding       : 19px;
   margin-bottom : 20px;
   border        : 1px solid transparent;
+  -webkit-box-sizing : border-box;
+  -moz-box-sizing    : border-box;
+  box-sizing         : border-box;
 }
 
 .pafl-success {
@@ -491,6 +514,10 @@
   margin-bottom: 25px;
   padding : 18px;
   width: 100%;
+  -webkit-box-sizing : border-box;
+  -moz-box-sizing    : border-box;
+  box-sizing         : border-box;
+
   &:before {
     content          : "";
     display          : inline-block;
